include/mesos/v1/executor.hpp
@@ -73,6 +73,16 @@ public:
   // events without ever being sent to the agent.
   virtual void send(const Call& call) override;
 
+protected:
+  // Stops the library so that:
+  //   - No more calls can be sent to the agent.
+  //   - No more callbacks can be made to the executor. In some cases, there
+  //     may be one additional callback if the library was in the middle of
+  //     processing an event.
+  //
+  // NOTE: This is used for testing.
+  virtual void stop();
+
 private:
   process::Owned<MesosProcess> process;
 };
